--- a/package.json
+++ b/package.json
@@ -63,43 +63,44 @@
   ],
   "devDependencies": {
     "animate.css": "3.5.2",
-    "autoprefixer": "^6.5.3",
-    "babel": "6.5.2",
-    "babel-cli": "6.18.0",
-    "babel-core": "^6.20.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.9",
-    "babel-plugin-transform-class-properties": "^6.19.0",
+    "autoprefixer": "^7.1.0",
+    "babel": "6.23.0",
+    "babel-cli": "6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-runtime": "6.15.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-stage-0": "6.16.0",
-    "babel-register": "6.18.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-register": "6.24.1",
     "chalk": "1.1.3",
     "chart.js": "^2.4.0",
     "cheerio": "0.22.0",
-    "chokidar": "1.6.1",
-    "copyfiles": "^1.0.0",
+    "chokidar": "1.7.0",
+    "copyfiles": "^1.2.0",
     "cross-env": "3.1.3",
     "css-loader": "^0.26.1",
     "dateformat": "^2.0.0",
     "debounce-collect": "1.0.2",
     "del": "2.2.2",
-    "eslint": "^3.12.0",
-    "eslint-config-availity": "2.0.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
-    "gh-pages": "^0.12.0",
+    "eslint": "^3.19.0",
+    "eslint-config-availity": "2.1.0",
+    "eslint-plugin-react": "^7.0.1",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
+    "gh-pages": "^1.0.0",
     "globby": "6.1.0",
-    "he": "1.1.0",
+    "he": "1.1.1",
     "holderjs": "2.9.4",
-    "inquirer": "^2.0.0",
-    "jquery": "^3.1.1",
+    "inquirer": "^3.0.6",
+    "jquery": "^3.2.1",
     "less": "2.7.1",
     "less-loader": "2.2.3",
     "less-plugin-npm-import": "2.1.0",
-    "lodash": "^4.17.2",
+    "lodash": "^4.17.4",
     "log-symbols": "1.0.2",
     "marked": "0.3.6",
     "metalsmith": "2.3.0",
@@ -112,25 +113,25 @@
     "metalsmith-permalinks": "0.5.0",
     "metalsmith-prism": "3.0.1",
     "metalsmith-rootpath": "1.0.4",
-    "moment": "^2.17.1",
-    "node-sass": "^3.13.1",
+    "moment": "^2.18.1",
+    "node-sass": "^4.5.3",
     "nunjucks": "3.0.0",
     "nunjucks-date": "1.2.0",
-    "ora": "0.3.0",
-    "postcss-loader": "^1.2.0",
+    "ora": "1.2.0",
+    "postcss-loader": "^2.0.5",
     "prismjs": "^1.6.0",
-    "sass-loader": "4.0.2",
+    "sass-loader": "6.0.5",
     "semver": "5.3.0",
-    "shelljs": "0.7.5",
+    "shelljs": "0.7.7",
     "slugify": "^1.1.0",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "velocity-animate": "1.3.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "1.16.2",
-    "webpack-merge": "^1.1.0",
-    "webpack-notifier": "1.4.1",
-    "yargs": "^6.5.0"
+    "style-loader": "0.17.0",
+    "url-loader": "0.5.8",
+    "velocity-animate": "1.5.0",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "2.4.5",
+    "webpack-merge": "^4.1.0",
+    "webpack-notifier": "1.5.0",
+    "yargs": "^8.0.1"
   },
   "keywords": [
     "css",
