--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "devDependencies": {
     "animate.css": "3.5.2",
     "autoprefixer": "^7.1.0",
+    "availity-workflow-logger": "^2.0.0",
     "babel": "6.23.0",
     "babel-cli": "6.24.1",
     "babel-core": "^6.24.1",
@@ -120,6 +121,7 @@
     "ora": "1.2.0",
     "postcss-loader": "^2.0.5",
     "prismjs": "^1.6.0",
+    "react-dev-utils": "^0.5.2",
     "sass-loader": "6.0.5",
     "semver": "5.3.0",
     "shelljs": "0.7.7",
