--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -19,9 +19,12 @@
     "lodash.map": "^4.6.0",
     "popper.js": "^1.12.9",
     "react-html-parser": "^2.0.1",
-    "slugify": "^1.2.4"
+    "slugify": "^1.2.4",
+    "webpack": "^3.0.0"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
